news, detai news, mat-bang, menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11125,26 +11125,27 @@ a:hove {
     width: 100%;
     padding: 0;
     margin: auto;
-    text-align: center;
+    /* text-align: center; */
     padding-bottom: 20px;
+    padding-left: 10px;
   }
   .list-tab ul.can-ho li {
     display: inline-block;
     width: auto;
     height: 35px;
-    background-color: #cf000f;
+    background-color: #4fa74a;
     line-height: 3;
     padding: 5px;
     text-transform: uppercase;
   }
   .list-tab ul.can-ho li a {
     color: #ffffff;
-    font: 15px 'Roboto Regular';
+    font: 12px 'Roboto Medium';
     text-decoration: none;
   }
   .list-tab ul.can-ho li:hover,
   .list-tab ul.can-ho li.uk-active {
-    background-color: #4fa74a;
+    background-color: #cf000f;
   }
   .room-tower {
     padding: 0;
@@ -11216,10 +11217,57 @@ a:hove {
   .list-news .news .item-news .desc .readmore:hover {
     background-color: #cf000f ;
   }
+  .news-detail {
+    width: 100%;
+    min-height: 500px;
+    text-align: justify;
+    margin-left: -5px;
+  }
+  .news-detail .title {
+    padding: 10px 0 ;
+  }
+  .news-relate-link ul {
+    padding: 0;
+  }
+  .news-relate-link ul .uk-icon-chevron-right {
+    padding-right: 10px;
+  }
+  .news-relate-link ul li a {
+    padding: 5px 0 5px 0;
+  }
+  .news-relate {
+    margin-top: 20px;
+  }
+  .news-relate ul li {
+    width: 10	0%;
+    max-height: 100px;
+    min-height: 70px;
+    float: left;
+    margin-bottom: 20px;
+  }
+  .news-relate ul li .news-realte-left {
+    width: 35%;
+    float: left;
+    height: 100%;
+  }
+  .news-relate ul li .news-realte-right {
+    width: 60%;
+    float: left;
+    height: 100%;
+    padding-left: 10px;
+    margin-top: 5px;
+  }
+  .news-relate ul li .news-realte-right a {
+    color: #000;
+    font: 15px 'Roboto Medium';
+  }
+  .right ul li {
+    width: 100%;
+  }
   .mobile-bottom {
     position: fixed;
     bottom: 0%;
-    background-color: #cf000f;
+    background-color: #951e20;
     height: 40px;
     width: 100%;
     left: 0;
@@ -11227,16 +11275,20 @@ a:hove {
   .mobile-bottom ul li {
     display: block;
     float: left;
-    width: 49%;
+    width: 45%;
   }
   .mobile-bottom ul li a {
     color: #ffffff;
-    font: 14px 'Roboto Regular';
+    font: 16px 'Roboto Regular';
     padding: 5px 10px;
+    line-height: 2;
     text-transform: uppercase;
   }
   .mobile-bottom ul li a .uk-icon-phone {
     padding-right: 10px;
+  }
+  .mobile-bottom ul li + li {
+    width: 55%;
   }
 }
 /* Small devices (phones, 480px and up) */
@@ -11358,6 +11410,8 @@ a:hove {
   }
   .main_vdh .right-content .title {
     margin-bottom: 20px;
+    font: 24px 'Roboto Bold';
+    padding: 10px 0;
   }
   .main_vdh .news .item-news {
     max-height: 128px;
@@ -11407,14 +11461,15 @@ a:hove {
 }
 /* Medium devices (desktops, 960px and up) */
 @media (min-width: 960px) {
+  .header-top {
+    min-height: 200px;
+    background-size: 100%;
+  }
 }
 /* Large devices (large desktops, 1220px and up) */
 @media (min-width: 1220px) {
   .mobile-bottom {
     display: none;
-  }
-  .logo {
-    margin-right: 60px;
   }
   #header {
     display: none;
@@ -11453,7 +11508,7 @@ a:hove {
     position: absolute;
     width: 15%;
     height: 100%;
-    background-color: rgba(224, 222, 221, 0.35);
+    background-color: rgba(0, 0, 0, 0.67);
     z-index: 1;
   }
   .main_vdh .menu-left .navigation {
@@ -11467,7 +11522,7 @@ a:hove {
     font-weight: 400;
     font: 18px 'Roboto Bold';
     line-height: 32px;
-    color: #000;
+    color: #ffffff;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
@@ -11653,6 +11708,7 @@ a:hove {
     top: 10px;
     width: 90%;
     padding-bottom: 50px;
+    background: url(samples/mat-bang.jpeg) no-repeat;
   }
   .list-tab ul.can-ho {
     right: 16%;
@@ -11663,7 +11719,7 @@ a:hove {
     display: inline-block;
     width: auto;
     height: 35px;
-    background-color: #cf000f;
+    background-color: #4fa74a;
     line-height: 3;
     padding: 5px;
     text-transform: uppercase;
@@ -11675,7 +11731,7 @@ a:hove {
   }
   .list-tab ul.can-ho li:hover,
   .list-tab ul.can-ho li.uk-active {
-    background-color: #4fa74a;
+    background-color: #cf000f;
   }
   .room-tower .child-room-tower li {
     display: inline-block;
@@ -11714,6 +11770,9 @@ a:hove {
     font: 16px 'Roboto Regular';
     color: #ffffff;
   }
+  .room-tower .image-mb {
+    width: 65%;
+  }
   .right-content {
     left: 15%;
     padding: 20px;
@@ -11721,7 +11780,7 @@ a:hove {
     width: 88%;
     overflow-y: scroll;
     min-height: 300px;
-    height: 590px;
+    height: 740px;
   }
   .right-content .title {
     margin-bottom: 20px;
@@ -11751,6 +11810,72 @@ a:hove {
   }
   .list-news .news .item-news .desc .readmore:hover {
     background-color: #cf000f ;
+  }
+  .news-detail {
+    width: 90%;
+    min-height: 500px;
+  }
+  .news-detail .news-detail-left {
+    width: 70%;
+    float: left;
+    overflow-y: scroll;
+    height: 760px;
+    margin-bottom: 50px;
+    padding-right: 10px;
+  }
+  .news-detail .news-detail-left p {
+    font: 14px 'Roboto Regular';
+    line-height: 1.5;
+  }
+  .news-detail .news-detail-left .data-time {
+    font: 15px 'Roboto Italic';
+  }
+  .news-detail .news-detail-right {
+    width: 30%;
+    float: left;
+  }
+  .news-relate {
+    margin-top: 20px;
+  }
+  .news-relate ul li {
+    width: 50%;
+    max-height: 100px;
+    min-height: 70px;
+    float: left;
+    margin-bottom: 20px;
+  }
+  .news-relate ul li .news-realte-left {
+    width: 35%;
+    float: left;
+    height: 100%;
+  }
+  .news-relate ul li .news-realte-right {
+    width: 62%;
+    float: left;
+    height: 100%;
+    padding-left: 10px;
+    margin-top: 5px;
+  }
+  .news-relate ul li .news-realte-right a {
+    color: #000;
+    font: 15px 'Roboto Medium';
+  }
+  .right ul li {
+    width: 100%;
+  }
+  .news-relate-link ul {
+    padding: 0;
+  }
+  .news-relate-link ul .uk-icon-chevron-right {
+    padding-right: 10px;
+  }
+  .news-relate-link ul li a {
+    padding: 5px 0 5px 0;
+  }
+  .contact {
+    background: url(samples/banner.peg) no-repeat;
+    background-size: 100%;
+    height: 100px;
   }
   html {
     overflow: hidden;
