--- a/assets/less/common/_responsive.less
+++ b/assets/less/common/_responsive.less
@@ -673,7 +673,7 @@
 				    transform: scale(1.2);
 				}
 				ul li.uk-active a{
-				    color: #fff;
+				    color: #cf000f;
 				    text-shadow: 0 0 10px rgba(17,60,2,1);
 				    -webkit-transform: scale(1.2);
 				    transform: scale(1.2);
@@ -721,7 +721,7 @@
 			    bottom: 0;
 			    opacity: 1;
 			    z-index: 1;
-			    left: 30%;
+			    left: 35%;
 		    a {
 	    	    width: auto;
 			    position: relative;
@@ -1014,7 +1014,7 @@
     			height: 100%;
     		}
     		.news-realte-right {
-    			width: 62%;
+    			width: 60%;
     			float: left;
     			height: 100%;
     			padding-left: 10px;
